--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;900&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/11aba5ecc5.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="src/styles.css" />
     <title>Pokemon Weather App</title>
   </head>
 
@@ -21,6 +36,7 @@
           <div class="col current-info" id="current-day-time-date">
             <span id="day-of-the-week-time"> Monday 4:05 </span>
             <span id="am-pm"> pm </span>
+            |
             <span id="month-date-year"> June 14, 2020 </span>
             |
             <span id="current-weather-conditions"> Partly Cloudy </span>
