--- a/index.html
+++ b/index.html
@@ -127,7 +127,10 @@
               </h4>
               <div class="types">
                 Normal, Rock
-                <div class="type-pic"></div>
+                <div class="type-pic">
+                  <img src="images/normal.png" alt="Snorlax" />
+                  <img src="images/rock.png" alt="Rhyperior" />
+                </div>
               </div>
             </div>
           </div>
