Added current date/time information

--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
             Alberta, Canada
           </p>
           <div class="col current-info" id="current-day-time-date">
-            <span id="day-of-the-week-time"> Monday 4:05 </span>
-            <span id="am-pm"> pm </span>
-            |
-            <span id="month-date-year"> June 14, 2020 </span>
+            <span id="day-of-the-week-time"> </span>
+            <span id="am-pm"> </span>
+            <span id="month-date-year"> </span>
             |
             <span id="current-weather-conditions"> Partly Cloudy </span>
           </div>
