Added city search feature

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <input
               type="text"
               name="city-input"
-              placeholder="Enter your city"
+              placeholder="Enter a city"
               autofocus="on"
               autocomplete="off"
               id="city-input"
