Added GitHub link

--- a/index.html
+++ b/index.html
@@ -249,6 +249,16 @@
           </div>
         </div>
       </div>
+      <span class="footer">
+        <a
+          href="https://github.com/twaytuck/pokemon-weather-app"
+          target="blank"
+          class="link"
+        >
+          Open-source code
+        </a>
+        by Tiana Waytuck
+      </span>
     </div>
     <script src="src/index.js"></script>
   </body>
