Corrected GitHub link

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
       <span class="footer">
         <a
           href="https://github.com/twaytuck/pokemon-weather-app"
-          target="blank"
+          target="_blank"
           class="link"
         >
           Open-source code
