Added current conditions and icons

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <span id="am-pm"> </span>
             <span id="month-date-year"> </span>
             |
-            <span id="current-weather-conditions"> Partly Cloudy </span>
+            <span id="current-weather-conditions"> </span>
           </div>
         </div>
         <div class="subtitle col-6">
@@ -73,9 +73,7 @@
               <div class="current-conditions-title">
                 Current Conditions
               </div>
-              <div class="current-icon" id="current-icon">
-                <i class="fas fa-cloud-sun"></i>
-              </div>
+              <div class="current-icon" id="current-icon"></div>
               <span class="current">
                 <span
                   class="current-temperature"
