Get forecast info without icons
Removed placeholders in HTML

--- a/index.html
+++ b/index.html
@@ -144,101 +144,15 @@
         <div class="col forecast-box">
           <div class="card forecast-card">
             <div class="card-body forecast-body">
-              <div class="row">
+              <div class="row" id="forecast">
                 <div class="col forecast-day">
-                  <h2 class="forecast-day-of-the-week">
-                    Tuesday
-                  </h2>
-                  <h3 class="forecast-date">
-                    June 15, 2020
-                  </h3>
+                  <h2 class="forecast-day-of-the-week"></h2>
+                  <h3 class="forecast-date"></h3>
                   <div class="forecast-temp">
-                    <div class="forecast-icon">
-                      <i class="fas fa-sun"></i>
-                    </div>
+                    <div class="forecast-icon"></div>
                     <div class="five-temp">
-                      <span id="day-1-temp">
-                        21°
-                      </span>
-                      <span class="five-unit" id="day-1-unit">
-                        C
-                      </span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col forecast-day">
-                  <h2 class="forecast-day-of-the-week">
-                    Wednesday
-                  </h2>
-                  <h3 class="forecast-date">
-                    June 16, 2020
-                  </h3>
-                  <div class="forecast-temp">
-                    <div class="forecast-icon">
-                      <i class="fas fa-sun"></i>
-                    </div>
-                    <div class="five-temp">
-                      <span id="day-2-temp">
-                        22°
-                      </span>
-                      <span class="five-unit" id="day-2-unit"> C </span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col forecast-day">
-                  <h2 class="forecast-day-of-the-week">
-                    Thursday
-                  </h2>
-                  <h3 class="forecast-date">
-                    June 17, 2020
-                  </h3>
-                  <div class="forecast-temp">
-                    <div class="forecast-icon">
-                      <i class="fas fa-cloud"></i>
-                    </div>
-                    <div class="five-temp">
-                      <span id="day-3-temp">
-                        19°
-                      </span>
-                      <span class="five-unit" id="day-3-unit"> C </span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col forecast-day">
-                  <h2 class="forecast-day-of-the-week">
-                    Friday
-                  </h2>
-                  <h3 class="forecast-date">
-                    June 18, 2020
-                  </h3>
-                  <div class="forecast-temp">
-                    <div class="forecast-icon">
-                      <i class="fas fa-cloud-showers-heavy"></i>
-                    </div>
-                    <div class="five-temp">
-                      <span id="day-4-temp">
-                        15°
-                      </span>
-                      <span class="five-unit" id="day-4-unit"> C </span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col forecast-day">
-                  <h2 class="forecast-day-of-the-week">
-                    Saturday
-                  </h2>
-                  <h3 class="forecast-date">
-                    June 19, 2020
-                  </h3>
-                  <div class="forecast-temp">
-                    <div class="forecast-icon">
-                      <i class="fas fa-bolt"></i>
-                    </div>
-                    <div class="five-temp">
-                      <span id="day-5-temp">
-                        20°
-                      </span>
-                      <span class="five-unit" id="day-5-unit"> C </span>
+                      <span id="day-5-temp"> </span>
+                      <span class="five-unit" id="day-5-unit"> </span>
                     </div>
                   </div>
                 </div>
