Get forecast icons

--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
                 <div class="col forecast-day">
                   <h2 class="forecast-day-of-the-week"></h2>
                   <h3 class="forecast-date"></h3>
-                  <div class="forecast-temp">
-                    <div class="forecast-icon"></div>
-                    <div class="five-temp">
-                      <span id="day-5-temp"> </span>
-                      <span class="five-unit" id="day-5-unit"> </span>
-                    </div>
+                  <div class="forecast-icon"></div>
+                  <div class="five-temp">
+                    <span id="day-5-temp">
+                      °
+                    </span>
+                    <span class="five-unit" id="day-5-unit"> C </span>
                   </div>
                 </div>
               </div>
