Added pokemon boosted type feature
Removed HTML placeholder
Input weather boosted pokemon types

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 Weather-Boosted Pokemon Type(s)
               </h4>
               <div class="types">
-                Normal, Rock
+                <span id="pokemon-type"> </span>
                 <div class="type-pic">
                   <img src="images/normal.png" alt="Snorlax" />
                   <img src="images/rock.png" alt="Rhyperior" />
