Added pokemon image feature to current weather conditions
Added placeholders for most weather types

--- a/index.html
+++ b/index.html
@@ -124,10 +124,7 @@
               </h4>
               <div class="types">
                 <span id="pokemon-type"> </span>
-                <div class="type-pic">
-                  <img src="images/normal.png" alt="Snorlax" />
-                  <img src="images/rock.png" alt="Rhyperior" />
-                </div>
+                <div class="type-pic" id="pokemon-image"></div>
               </div>
             </div>
           </div>
