Added tooltips for search and current date/time

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
             Alberta, Canada
           </p>
           <div class="col current-info" id="current-day-time-date">
+            <span class="info-tooltip">
+              <i class="far fa-question-circle info-icon"></i>
+              <span class="info-tooltip-text">
+                Date and time the current weather was last updated</span
+              >
+            </span>
             <span id="day-of-the-week-time"> </span>
             <span id="am-pm"> </span>
             <span id="month-date-year"> </span>
@@ -46,6 +52,13 @@
           <form class="change-city">
             <label for="city-input">
               Change city
+              <span class="info-tooltip">
+                <i class="far fa-question-circle info-icon"></i>
+                <span class="info-tooltip-text">
+                  Enter a city name i.e. "Calgary" or a city name and country
+                  code i.e. "Calgary, CA"</span
+                >
+              </span>
             </label>
             <input
               type="text"
