Updated styling to C and F when temps are in celsius vs. fahrenheit
Added "active" and "inactive" classes
Created styling for the new classes
Changed convertToCelisus and convertToFahrenheit functions to use new classes

--- a/index.html
+++ b/index.html
@@ -97,15 +97,13 @@
                   °
                 </span>
                 <span class="temperature-unit">
-                  <span class="celsius" id="celsius">
-                    <strong>
-                      C
-                    </strong>
+                  <span class="celsius active" id="celsius">
+                    C
                   </span>
                   <span class="divider">
                     |
                   </span>
-                  <span class="fahrenheit" id="fahrenheit">
+                  <span class="fahrenheit inactive" id="fahrenheit">
                     F
                   </span>
                 </span>
