Added windy pokemon alert

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             <div class="card-body pokemon-body">
               <h4>
                 Weather-Boosted Pokemon Type(s)
+                <span class="pokemon-tooltip"> </span>
               </h4>
               <div class="types">
                 <span id="pokemon-type"> </span>
