Added pokemon images to weather conditions

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="subtitle col-6">
+        <div class="subtitle col">
           Current City
           <br />
           <h1 class="current-city">
@@ -48,7 +48,7 @@
             <span id="current-weather-conditions"> </span>
           </div>
         </div>
-        <div class="subtitle col-6">
+        <div class="subtitle col">
           <form class="change-city">
             <label for="city-input">
               Change city
