Added windspeed conversion

--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
                     Wind:
                   </strong>
                   <span id="wind-speed"> </span>
-                  km/h
+                  <span id="wind-unit">
+                    km/h
+                  </span>
                 </span>
               </div>
             </div>
