Changed h4 to a div and updated CSS

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
 
       <div class="row current-conditions-row">
-        <div class="col-6 current-conditions">
+        <div class="col current-conditions">
           <div class="card current-card">
             <div class="card-body current-body">
               <div class="current-conditions-title">
@@ -129,13 +129,13 @@
             </div>
           </div>
         </div>
-        <div class="col-6 pokemon">
+        <div class="col pokemon">
           <div class="card pokemon-card">
             <div class="card-body pokemon-body">
-              <h4>
+              <div class="weather-boost-title">
                 Weather-Boosted Pokemon Type(s)
                 <span class="pokemon-tooltip"> </span>
-              </h4>
+              </div>
               <div class="types">
                 <span id="pokemon-type"> </span>
                 <div class="type-pic" id="pokemon-image"></div>
