Updated headers to divs and updated CSS

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <div class="subtitle col">
           Current City
           <br />
-          <h1 class="current-city">
+          <div class="current-city" id="current-city">
             Calgary
-          </h1>
+          </div>
           <p class="province-country" id="province-country">
             Alberta, Canada
           </p>
@@ -157,8 +157,8 @@
             <div class="card-body forecast-body">
               <div class="row" id="forecast">
                 <div class="col forecast-day">
-                  <h2 class="forecast-day-of-the-week"></h2>
-                  <h3 class="forecast-date"></h3>
+                  <div class="forecast-day-of-the-week"></div>
+                  <div class="forecast-date"></div>
                   <div class="forecast-icon"></div>
                   <div class="five-temp">
                     <span id="day-5-temp">
